# rubik_cube_solver

./: .gitignore  README.md  requirements.txt  setup.cfg
scripts/: control_server.py  control_server_manual.py  isa_for_cube.py  serial_com_control.py  simulate_control_server.py  solve_cube_flow.py
scripts/final/: calibrate.py  control_server.py
src/camera/: __init__.py  control.py
src/color_detection/: __init__.py  calibrate.py  defaults.py  detect.py
src/communication/: __init__.py  communication.py  serial_communication.py
src/cube/: __init__.py  color.py  cube.py
src/isa/: isa.py
src/output/: __init__.py  output.py  std_out.py
src/rubik_machine_state/: __init__.py  detection_end_state.py  detection_start_state.py  detection_state.py  non_isa.py  rubik_machine_state.py  solution_start_state.py  solution_state.py  state.py
src/solver/: __init__.py  isa.py  rcn_to_isa.py  solver.py
src/transition/: __init__.py  transition_handlers.py
tests/color_detection/: test_detect.py
tests/cube/: test_cube.py
tests/rubik_machine_state/: fake_transition_handlers.py  test_detection_phase.py  test_rubik_machine_state.py  test_solution_state.py
tests/solver/: test_rcn_to_isa.py
