[metadata]
name = rubik-cube-solver-snil
version = 0.0.1
author = Songdet Nillasithanukroh
author_email = son22@pitt.edu
description = Package implementing functionalities to drive a rubik cube solver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
